# Anime-MVP

./: .gitignore  README.md  additional_instructions.md  anime_assistant.py  data_retrieval_agent_simple.mmd  launch_app.py  launch_streamlit.py  personal_watch_history.py  planning_graph.mmd  pyproject.toml  run.py  sequential_workflow.py  streamlit_app.py  ui_agent_simple.mmd
data/: sample_preferences.json
docs/: glue_deployment.md
src/agents/: data_retrieval_agent.py  user_interface_agent.py  user_interface_agent_autogen.py
src/data/: athena_client.py  s3_reader.py
src/glue/: __init__.py  anime_etl.py  deploy_glue_job.py
src/ingestion/: fetch_jikan.py
tests/: README.md  __init__.py  test_jikan_api.py  test_pipeline.py
tests/agents/: test_athena_agent.py  test_data_retrieval_agent.py  test_user_interface_agent.py
tests/data/: explore_jikan_endpoints.py  test_athena_queries.py  test_local_etl.py
tests/infrastructure/: add_athena_permissions.py  fix_glue_role.py  test_glue_deployment.py  test_quick_deployment.py
tests/integration/: sequential_workflow.py  test_connection.py  test_orchestration.py
